--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
    "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger. Swagger API docs",
    "main": "dist/server.js",
    "scripts": {
-      "predev": "docker-compose up --detach",
       "dev": "nodemon --watch src -e ts,tsx --exec ts-node src/server.ts",
       "build-ts": "tsc",
       "copy-static-assets": "ts-node copyStaticAssets.ts",
@@ -17,8 +16,8 @@
       "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
    },
    "engines": {
-      "node": ">=12.x.x",
-      "npm": ">=6.x.x"
+      "node": "12.x.x",
+      "npm": "6.x.x"
    },
    "author": "Javier Aviles",
    "license": "MIT",
