--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "node-typescript-koa-rest",
-   "version": "1.7.0",
+   "name": "find-my-doggo",
+   "version": "0.0.1",
    "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger. Swagger API docs",
    "main": "dist/server.js",
    "scripts": {
@@ -44,8 +44,8 @@
       "@types/koa": "2.0.49",
       "@types/koa-bodyparser": "^4.3.0",
       "@types/koa-helmet": "^3.1.2",
-      "@types/koa__router": "^8.0.2",
       "@types/koa__cors": "^3.0.1",
+      "@types/koa__router": "^8.0.2",
       "@types/node": "^12.12.6",
       "@types/shelljs": "^0.8.7",
       "@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -58,14 +58,15 @@
    },
    "dependencies": {
       "@koa/cors": "^3.0.0",
+      "@koa/router": "^8.0.8",
       "class-validator": "^0.11.1",
       "cron": "^1.8.2",
       "dotenv": "^8.2.0",
+      "jwt": "^0.2.0",
       "koa": "^2.11.0",
       "koa-bodyparser": "^4.3.0",
       "koa-helmet": "^5.2.0",
       "koa-jwt": "^3.6.0",
-      "@koa/router": "^8.0.8",
       "koa-swagger-decorator": "^1.5.16",
       "pg": "^7.12.1",
       "reflect-metadata": "^0.1.13",
