--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
    "dependencies": {
       "@koa/cors": "^3.0.0",
       "@koa/router": "^8.0.8",
+      "@types/jsonwebtoken": "^8.5.0",
       "class-validator": "^0.11.1",
       "cron": "^1.8.2",
       "dotenv": "^8.2.0",
-      "jwt": "^0.2.0",
+      "jsonwebtoken": "^8.5.1",
       "koa": "^2.11.0",
       "koa-bodyparser": "^4.3.0",
       "koa-helmet": "^5.2.0",
