--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,9 @@
             "ignoreParameters": true
          }
       ],
-      "@typescript-eslint/no-unused-vars": "warn"
+      "@typescript-eslint/no-unused-vars": [
+         "error",
+         { "ignoreRestSiblings": true }
+      ]
    }
 }
