--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
       "@koa/cors": "^3.0.0",
       "@koa/router": "^8.0.8",
       "@types/jsonwebtoken": "^8.5.0",
+      "argon2": "^0.27.0",
       "class-validator": "^0.11.1",
       "cron": "^1.8.2",
       "dotenv": "^8.2.0",
