--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
       ],
       "@typescript-eslint/no-unused-vars": [
          "error",
-         { "ignoreRestSiblings": true }
+         { "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
       ]
    }
 }
