update build to set version

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
       "serve": "node dist/server.js",
       "build": "npm run lint && npm run build-ts && npm run copy-static-assets",
+      "postbuild": "ts-node postBuild.ts",
       "start": "npm run serve",
       "test:integration:heroku": "newman run integrationtests/node-koa-typescript.postman_collection.json -e integrationtests/env/heroku-dev.postman_environment.json",
       "test:integration:local": "newman run integrationtests/node-koa-typescript.postman_collection.json -e integrationtests/env/local-dev.postman_environment.json",
@@ -47,7 +48,6 @@
       "@types/koa__cors": "^3.0.1",
       "@types/koa__router": "^8.0.2",
       "@types/node": "^12.12.6",
-      "@types/nuxtjs__auth": "^4.8.5",
       "@types/shelljs": "^0.8.7",
       "@typescript-eslint/eslint-plugin": "^2.27.0",
       "@typescript-eslint/parser": "^2.27.0",
